# flario

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/drivers/: mod.rs
src/drivers/io/: keyboard.rs  mod.rs
src/drivers/io/serial/: mod.rs
src/drivers/io/vga/: mod.rs
src/drivers/qemu/: mod.rs
src/drivers/rtc/: mod.rs
src/kernel/: environ.rs  fs.rs  gdt.rs  mod.rs  sc.rs  status.rs
src/kernel/fs/: mod.rs  public.rs
src/kernel/fs/btfs/: fs.rs  node.rs
src/kernel/fs/vsfs/: mod.rs
src/kernel/interrupts/: idt.rs  mod.rs  pic.rs
src/kernel/mem/: frame.rs  mod.rs  page.rs
src/kernel/mem/globalloc/: fixed_size_list.rs  heap.rs  linked_list.rs  mod.rs
src/kernel/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/shell/: command.rs  environ.rs  fs.rs  main.rs  mod.rs  program.rs  string.rs  vector.rs
src/shell/programs/: about.rs  cd.rs  clear.rs  debug.rs  edit.rs  env.rs  help.rs  logo.rs  ls.rs  mkdir.rs  mkfile.rs  mod.rs  not_found.rs  read.rs  rmdir.rs  time.rs  tree.rs
src/utils/: mod.rs
tests/: basic_boot.rs  heap_allocator.rs  panic_test.rs  stack_overflow.rs
